1. Open create subscription modal after sign in or sign up 2. Added My saved searches listing in nav bar of add business 3. My saved searches listing has delete option for deleting old subscription

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -326,6 +326,8 @@
 <script src="resources/services/propertyService.js"></script>
 <script src="resources/services/auth.service.js"></script>
 <script src="resources/controller/contactUsController.js"></script>
+<script src="resources/controller/createSearchAgentController.js"></script>
+<script src="resources/controller/listSearchAgentController.js"></script>
 <script src="resources/controller/businessBuyGuidanceController.js"></script>
 
 
