--- a/src/main/resources/static/resources/pages/nav.html
+++ b/src/main/resources/static/resources/pages/nav.html
@@ -10,10 +10,12 @@
                   <span class="list-group-item heading">Manage Listings</span>
                   <a ui-sref=".addListing" class="list-group-item"><i class="fa fa-fw fa-plus-square-o"></i> Add Business</a>
                   <a href="#/business/bookmarkedListing" class="list-group-item d-flex justify-content-between align-items-center"><span><i class="fa fa-fw fa-bookmark-o"></i> Bookmarked Listing</span>
-                    <span class="badge badge-primary badge-pill">10</span>
+<!--                    <span class="badge badge-primary badge-pill">10</span>-->
                   </a>
                   <a href="#/business/myListing" class="list-group-item d-flex justify-content-between align-items-center"><span><i class="fa fa-fw fa-bars"></i> My Listings</span>
-                    <span class="badge badge-primary badge-pill">7</span>
+<!--                    <span class="badge badge-primary badge-pill">7</span>-->
+                  </a>
+                  <a href="#/business/listSearchAgent" class="list-group-item d-flex justify-content-between align-items-center"><span><i class="fa fa-fw fa-bars"></i> My Saved Searches</span>
                   </a>
                 </div>
               </div>
