--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -57,7 +57,10 @@
       <div class="col-md-12 col-lg-12 col-xl-12 central-content">
         <div class="heading">
           <h2>Find <i>RealWorth</i><small>&trade;</small> of Business!</h2>
-	  <h6 style="color:#FF0000">Currently serving San Francisco - San Jose - Bay Area in California.</h6>
+	  <h6 style="color:#FF0000">We have valuation data for millions of businesses all over US.</h6>
+	  <!-- 
+	  	<h6 style="color:#FF0000">See thousands of Business that are for sell.</h6>
+	  -->
         </div>
         <form name="searchBusinessForm" ng-controller="homeController" ng-submit="submitted = true" novalidate>
           <div class="justify-content-md-center">
