--- a/src/main/resources/static/resources/pages/createSearchAgentModal.html
+++ b/src/main/resources/static/resources/pages/createSearchAgentModal.html
@@ -5,7 +5,7 @@
             <!-- Modal Header -->
             <div class="modal-header">
                 <h4 class="modal-title">Save search business subscription</h4>
-                <button type="button" class="close" data-ng-click="listSearchAgent()" data-dismiss="modal">&times;</button>
+                <button type="button" class="close" data-ng-click="skipSearchAgent()" data-dismiss="modal">&times;</button>
             </div>
 
             <!-- Modal body -->
@@ -90,7 +90,7 @@
             <!-- Modal footer -->
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                        data-ng-click="listSearchAgent()">Skip</button>
+                        data-ng-click="skipSearchAgent()">Skip</button>
                 <button type="button" class="btn btn-primary" data-dismiss="modal"
                         ng-disabled="subscriptionForm.$invalid" ng-class="{ 'disabled': subscriptionForm.$invalid }"
                         data-ng-click="saveSearchAgent()">Save search</button>
